<resources>
    <string name="app_name">JIKA_E</string>
    <string name="title_activity_iniciomenu">iniciomenu</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Perfil</string>
    <string name="title_notifications">Aprender</string>

    <string name="title_1">Lección 1</string>
    <string name="title_2">Lección 2</string>
    <string name="title_3">Lección 3</string>
    <string name="title_4">Lección 4</string>

    <string name="titulo_articulacion">Articulación</string>
    <string name="titulo_silaba">Sílaba</string>
    <string name="titulo_letra">Letra muda</string>
    <string name="titulo_rasgos">Rasgos de los sonidos</string>
    <string name="titulo_consonante">Consonante sorda</string>
    <string name="titulo_conteo">Conteo de sílabas</string>
    <string name="titulo_diptongo">Diptongos</string>
    <string name="titulo_nucleo">Núcleo sílabico</string>


    <string name="texto_articulacion">La fonética articulatoria define los sonidos teniendo en cuenta:
    1) el modo de articulación
    2) el punto de articulación
    3) la función de las cuerdas vocales
    4) la función del velo del paladar</string>
    <string name="texto_articulaciondos">Manera de articulación
Oclusivas, aproximantes, fricativas, africadas, nasales, laterales, vibrante simple y vibrante múltiple</string>
    <string name="texto_oclu">Cuando se obstruye totalmente se producen las consonantes oclusivas
(momentáneas) Ej. [p] [t] [k]
Cuando la corriente de aire se estrecha y se produce una fricción, se
producen las consonantes fricativas (continuas). Ej. [f ], [s]</string>


    <string name="texto_silaba">Las sílabas son cada uno de los sonidos articulados que realizas al hablar. Por ejemplo, al pronunciar "galletas", se escuchan tres golpes de voz distintos:
GA  LLE  TAS</string>
    <string name="texto_silabados">Esto quiere decir, que esta palabra tiene tres sílabas.</string>
    <string name="texto_silabatres">A su vez, cada sílaba está compuesta por uno o varios fonemas, que son la unidad mínima de articulación y pueden ser vocálicos o consonánticos, ¡presta atención!

La vocal "a" tiene su propio sonido, su fonema es vocálico.
La consonante "t" se pronuncia "te", ese es su fonema, el cual es consonántico.</string>
    <string name="texto_letra">La letra H no tiene sonido.[1] Las palabras "hola" y "ola" suenan exactamente igual.
En las combinaciones que y qui la "u" no tiene sonido. La palabra queso suena [keso]. Todas las letras de esta palabra tienen correspondencia con un sonido, excepto la "u".
En la combinaciones gue y gui la "u" no tiene sonido, pero indica que la "g" debe pronunciarse como "g" [g] y no como "j" [x]. Por ejemplo guita se pronuncia gita y en cambio gitano es [xitano].</string>

    <string name="texto_rasgos">Un rasgo distintivo es "una señal fonética compleja
capaz de cambiar un fonema en otro por sustitución" </string>
    <string name="texto_rasgosdos">-Oclusiva (obstruyentes): Se impone una obstrucción a la salida de la corriente
de aire en el canal oral: cierre total del canal oral.
-Fricativa (obstruyentes): Se impone una obstrucción a la salida de la corriente
de aire en el canal oral: cierre no total del canal oral, de modo que el aire produce
una fricción.
-Africada (obstruyentes): Se impone una obstrucción a la salida de la corriente
de aire en el canal oral: cierre total del canal oral seguido de una apertura leve de
la oclusión (de modo que el aire produce una fricción al producirse este
relajamiento).
-Aproximante (obstruyentes): Se impone una obstrucción a la salida de la
corriente de aire en el canal oral: cierre no total del canal oral, de modo que el aire
produce una fricción, menor que en las consonantes fricativas.
-Nasal (sonorantes): En la cavidad oral se produce una oclusión completa pero el aire sale libremente a través de la cavidad nasal.
-Lateral (líquidas; sonorantes): En la zona central de la cavidad oral se produce una oclusión, pero el aire sale libremente por los laterales de la cavidad oral.
-Vibrante (líquidas, sonorantes): El articulador activo (lengua) golpea contra el articulador pasivo. </string>

    <string name="texto_consonante">Es sorda cuando se pronuncia sin hacer vibrar las cuerdas vocales. Por ejemplo, los sonidos indicados por las letras "b" y "p" solo se diferencian en su vocalización.</string>
    <string name="texto_consonantedos">Otros fonemas no involucran la vibración de las cuerdas vocales, tales como las consonantes h, j, t y s, y son llamados sordos (no tonales).</string>
    <string name="texto_conteo">Las sílabas son unidades de sonido que forman las palabras. En español, generalmente seguimos las siguientes reglas para contar las sílabas:</string>
    <string name="texto_conteodos">Cada vocal representa una sílaba: En general, cada vocal (a, e, i, o, u) se cuenta como una sílaba. Por ejemplo, la palabra "casa" tiene dos sílabas: "ca-sa".</string>
    <string name="texto_conteotres">Agrupación de consonantes: Al contar las sílabas, debemos prestar atención a la agrupación de consonantes. En general, una consonante entre dos vocales
pertenece a la sílaba siguiente. Por ejemplo, la palabra "ca-sa" tiene dos sílabas porque la consonante "s" pertenece a la segunda sílaba.</string>



    <string name="text_1">El sonido K se escribe con c delante de a, o, u.</string>
    <string name="text_2">El sonido K se escribe con el díagrafo delante de e, i.</string>
    <string name="text_3">El sonido r suave se representa con una sola letra r.</string>
    <string name="text_4">El sonido r fuerte entre vocales se representa con el díagrafo rr.</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

</resources>
